temp fix for stores on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,31 +1,4 @@
-/**
- * Site header
- */
-/*.main-header {
-    border-bottom: 5px solid $brand-color;
-    min-height: 56px;
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
-}
-
-.site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
-    img {
-        width: 225px;
-        margin: .2em 0;
-    }
-}
 
 .site-nav {
     float: right;
@@ -37,7 +10,7 @@
     .trigger {
         position: relative;
         top: 50%;
-        transform: translateY(25%);
+        /*transform: translateY(200%);*/
     }
 
     .page-link {
@@ -46,7 +19,7 @@
         font-weight: 700;
         line-height: $base-line-height;
         &:hover {
-            color: $brand-color;
+            color: #fff;
         }
 
         &-current {
@@ -55,79 +28,18 @@
             font-size: 1.25em;
             font-weight: 700;
             line-height: $base-line-height;
-                &:hover {
-                color: $brand-color;
-            }
-                &:not(:last-child) {
-                margin-right: 20px;
-            }
         }
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
     }
 
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
-        }
-    }
+ 
 }
 
-*/
+
 
 /**
  * Site footer
  */
-.site-footer {
-    border-top: 5px solid $brand-color;
-    padding: $spacing-unit 0;
-}
 
 .footer-heading {
     font-size: 18px;
@@ -194,11 +106,16 @@
 /**
  * Page content
  */
-.home .page-content {
+/*.home .page-content {
     padding: 0;
 }
 .page-content {
     padding: 30px 0;
+}*/
+
+article.post {
+    padding: 3em 1em;
+    background: rgba(0,0,0,.2);
 }
 
 .page-heading {
@@ -246,6 +163,26 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
+    img {
+        margin: 1em auto;
+        width: 100%;
+    }
+
+    ul {
+        margin: 0;
+    }
+
+    li {
+        list-style: none;
+        a {
+            
+            text-decoration: underline;
+        }
+        p {
+            font-style: italic;
+        }
+    }
+
     h2 {
         font-size: 32px;
 
@@ -269,4 +206,50 @@
             font-size: 18px;
         }
     }
+}
+
+.ourbeers {
+    h3 {
+        margin: 1em 0 0;
+    }
+    li {
+        margin: .5em 0;
+    span {
+        font-size: 1.25em;
+        text-decoration: underline;
+        }
+    }
+}
+
+.wheretobuy {
+    h3 {
+        margin: 1em 0 0;
+    }
+    
+    .importedlist {
+        font-size: 1.5em;
+        width: 100%;
+        overflow: hidden;
+        .store {
+            float: left;
+            width: 50%;
+        }
+        .city {
+            float: left;
+            width: 50%;
+        }
+        hr {
+            border-style: dotted;
+        }
+        li a {
+        
+        text-decoration: none;
+        
+        }
+    }
+    @include media-query($on-ipad) {
+     .city {
+         display: none;
+     }
+ }
 }
